--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
@@ -13,17 +13,18 @@
 				</div>
 			</li>
 			<li *ngFor="let user of randomPeople" class="list-group-item text-left">
-				<a class="fancybox" rel="gallery" href="{{user.Photo}}">
+				<a *ngIf="user.Photo" class="fancybox" rel="gallery" href="{{user.Photo}}">
 					<img class="img-thumbnail" src="{{user.Photo}}">
 				</a>
 				<label class="pull-right">
-					<a type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
+					<a  type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
 					<div style="display:none"><!--костиль)))-->
+						<input #username [value]="user.Username">
 						<input #id [value]="user.Id">
 					</div>
-					<button (click)="createChat(id.value)" class="btn btn-info btn-xs " title="Create chat">
+					<button (click)="createChat(id.value,username.value)" class="btn btn-info btn-xs " title="Create chat">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
